--- a/ccan/foreach/CMakeLists.txt
+++ b/ccan/foreach/CMakeLists.txt
@@ -1,4 +1,4 @@
-set( CCAN_LIB_DEPENDS
+set( CCAN_MOD_DEPENDENCIES
     # only if !HAVE_COMPOUND_LITERALS || !HAVE_FOR_LOOP_DECLARATION
     ccan_list
 )
