--- a/ccan/list/CMakeLists.txt
+++ b/ccan/list/CMakeLists.txt
@@ -1,8 +1,5 @@
-set( CCAN_LIB_DEPENDS
+set( CCAN_MOD_DEPENDENCIES
     ccan_str
-)
-
-set( CCAN_H_DEPENDS
     ccan_container_of
     ccan_check_type
 )
