--- a/ccan/strset/CMakeLists.txt
+++ b/ccan/strset/CMakeLists.txt
@@ -1,10 +1,7 @@
-set( CCAN_LIB_DEPENDS
+set( CCAN_MOD_DEPENDENCIES
     ccan_ilog
     ccan_str
     ccan_likely
-)
-
-set( CCAN_H_DEPENDS
     ccan_short_types
     ccan_typesafe_cb
 )
